--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "db-start": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/Dannus90/Apollo-Gql-Practise#readme",
   "dependencies": {
     "apollo-server": "^2.21.1",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "json-server": "^0.16.3"
   }
 }
