--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "db-start": "json-server --watch db.json"
+    "db-start": "json-server --port 3001 --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,11 @@
   "homepage": "https://github.com/Dannus90/Apollo-Gql-Practise#readme",
   "dependencies": {
     "apollo-server": "^2.21.1",
+    "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "json-server": "^0.16.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
